--- a/_posts/2015-01-27-cfc-open.md
+++ b/_posts/2015-01-27-cfc-open.md
@@ -6,4 +6,4 @@ author_handle: johanneslink
 ---
 
 Our [Call for Contributions](/cfc.html) is now open. We will accept 
-submissions till <span class="live-stress">Feb 28, 2015</span>.
+submissions till *Feb 28, 2015*.
